fix: correct the concurrency examples and make the tests actually assert
Bugs in the examples
--------------------
- Reactor accepted a connection and then dropped it: it never registered the channel for
  reads and had nothing to dispatch to. Added the EventHandler it hands readiness events to.
- The odd/even printers caught InterruptedException inside their loop, restored the flag and
  carried on. A restored flag makes the next wait() throw immediately, so the loop span at
  full speed to completion while silently dropping every remaining number. The two printers
  were copies of the same loop, so each collapses into one parameterised method.
- AccountAmount let a synchronized block and a ReentrantLock guard the same field. Those are
  unrelated mechanisms and do not exclude one another, so the "safe" variants still raced.
  Each strategy now guards its own field.
- The CopyOnWriteArrayList "correct usage" example used a check-then-act pair that is still a
  race; addIfAbsent does it atomically.
- The singleton examples advertised double-checked locking without the volatile that makes it
  work, so they demonstrated the broken idiom while claiming to be the fix.
- ThreadLeakageExample was a while(true) starting a thread per iteration, so running the demo
  meant exhausting the machine. It is bounded now, and the resolution awaits termination --
  shutdown() only stops new submissions, so it had been returning while work was still running.
- InterruptedException is handled the same way throughout: restore the flag, then stop.

Tests
-----
Several tests asserted nothing. They slept, then either checked a value they had already read
or passed unconditionally -- one interrupted the threads and returned, green even against a
table that deadlocked instantly. Others asserted inside spawned threads, where an
AssertionError kills only that worker and never reaches JUnit.

They now wait for the real condition through two helpers in org.alxkm.testsupport: Await polls
a cond